--- a/Customer/app/src/main/res/layout/activity_register.xml
+++ b/Customer/app/src/main/res/layout/activity_register.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_login"
+    android:id="@+id/activity_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hackerearth.go_hackathon.onevest.customer.LoginActivity">
+    tools:context="com.hackerearth.go_hackathon.onevest.customer.RegisterActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,18 +14,18 @@
         android:gravity="center">
 
         <TextView
-            android:id="@+id/act_log_dontTV"
+            android:id="@+id/act_reg_alreadyTV"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Don't have an account?"
+            android:text="Already have an account?"
             android:layout_gravity="center"
             android:gravity="center"/>
         <Button
-            android:id="@+id/act_log_regBT"
+            android:id="@+id/act_reg_loginBT"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="register"
-            android:layout_toRightOf="@id/act_log_dontTV"
+            android:text="login"
+            android:layout_toRightOf="@id/act_reg_alreadyTV"
             android:background="@android:color/transparent"/>
     </RelativeLayout>
 
@@ -40,22 +40,32 @@
         android:paddingTop="@dimen/activity_vertical_margin">
 
         <EditText
-            android:id="@+id/act_log_emailET"
+            android:id="@+id/act_reg_emailET"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:hint="Email"
             android:inputType="textEmailAddress"/>
-
         <EditText
-            android:id="@+id/act_log_passwordET"
+            android:id="@+id/act_reg_nameET"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:hint="Name"/>
+        <EditText
+            android:id="@+id/act_reg_phoneET"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:hint="Phone (+62)"
+            android:inputType="number"/>
+        <EditText
+            android:id="@+id/act_reg_passwordET"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:hint="Password"
             android:inputType="textPassword"/>
         <Button
-            android:id="@+id/act_log_loginBT"
+            android:id="@+id/act_reg_regBT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="login"/>
+            android:text="register"/>
     </LinearLayout>
 </RelativeLayout>
