--- a/Customer/app/src/main/res/layout/activity_go_car.xml
+++ b/Customer/app/src/main/res/layout/activity_go_car.xml
@@ -47,6 +47,7 @@
         android:id="@+id/act_car_orderBT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="order"/>
+        android:text="order"
+        android:background="@color/colorAccent"/>
 
 </LinearLayout>
