--- a/Customer/app/src/main/res/layout/activity_login.xml
+++ b/Customer/app/src/main/res/layout/activity_login.xml
@@ -4,14 +4,24 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hackerearth.go_hackathon.onevest.customer.LoginActivity">
+    tools:context="com.hackerearth.go_hackathon.onevest.customer.LoginActivity"
+    android:background="@color/colorPrimary">
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/gojek_putih"
+        android:scaleType="fitCenter"
+        android:layout_centerHorizontal="true"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:background="@android:color/white">
 
         <TextView
             android:id="@+id/act_log_dontTV"
@@ -44,18 +54,24 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:hint="Email"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
             android:inputType="textEmailAddress"/>
 
         <EditText
             android:id="@+id/act_log_passwordET"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_marginBottom="16dp"
             android:hint="Password"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
             android:inputType="textPassword"/>
         <Button
             android:id="@+id/act_log_loginBT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="login"/>
+            android:text="login"
+            android:background="@color/colorAccent"/>
     </LinearLayout>
 </RelativeLayout>
