--- a/Customer/app/src/main/res/layout/activity_resto.xml
+++ b/Customer/app/src/main/res/layout/activity_resto.xml
@@ -4,9 +4,6 @@
     android:id="@+id/activity_resto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.hackerearth.go_hackathon.onevest.customer.RestoActivity">
 
     <Button
@@ -14,9 +11,10 @@
         android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:layout_alignParentBottom="true"
         android:text="review"
-        android:background="@android:color/transparent"/>
+        android:background="@color/colorAccent"/>
 
     <ListView
         android:id="@+id/act_resto_LV"
