--- a/Driver/app/src/main/res/layout/activity_login.xml
+++ b/Driver/app/src/main/res/layout/activity_login.xml
@@ -4,14 +4,24 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.hackerearth.go_hackathon.onevest.driver.LoginActivity">
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/gojek_putih"
+        android:scaleType="fitCenter"
+        android:layout_centerHorizontal="true"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:background="@android:color/white">
 
         <TextView
             android:id="@+id/act_log_dontTV"
@@ -37,12 +47,17 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <EditText
             android:id="@+id/act_log_emailET"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
             android:hint="Email"
             android:inputType="textEmailAddress"/>
 
@@ -51,11 +66,15 @@
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:hint="Password"
-            android:inputType="textPassword"/>
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
+            android:inputType="textPassword"
+            android:layout_marginBottom="16dp"/>
         <Button
             android:id="@+id/act_log_loginBT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="login"/>
+            android:text="login"
+            android:background="@color/colorAccent"/>
     </LinearLayout>
 </RelativeLayout>
