--- a/Restaurant/app/src/main/res/layout/activity_register.xml
+++ b/Restaurant/app/src/main/res/layout/activity_register.xml
@@ -4,12 +4,22 @@
     android:id="@+id/activity_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context="com.hackerearth.go_hackathon.onevest.restaurant.RegisterActivity">
+
+    <ImageView
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/gojek_putih"
+        android:scaleType="fitCenter"
+        android:layout_centerHorizontal="true"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:orientation="horizontal"
+        android:background="@android:color/white"
         android:layout_alignParentBottom="true"
         android:gravity="center">
 
@@ -46,24 +56,32 @@
             android:id="@+id/act_reg_emailET"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
             android:hint="Email"
             android:inputType="textEmailAddress"/>
         <EditText
             android:id="@+id/act_reg_nameET"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
             android:hint="Resto Name"/>
         <EditText
             android:id="@+id/act_reg_passwordET"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:hint="Password"
+            android:textColorHint="@android:color/white"
+            android:textColor="@android:color/white"
+            android:layout_marginBottom="16dp"
             android:inputType="textPassword"/>
         <Button
             android:id="@+id/act_reg_regBT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="register"/>
+            android:text="register"
+            android:background="@color/colorAccent"/>
     </LinearLayout>
 
 </RelativeLayout>
